# models/routes.go
@@ -10,7 +10,7 @@ type Route struct {
 	Price      int       `gorm:"default false" json:"price"`
 	ClientID   int       `gorm:"references users(id)" json:"-"`
 	DriverID   int       `gorm:"references users(id)" json:"-"`
-	IsResponse bool      `gorm:"default false" json:"-"`
+	IsResponse bool      `gorm:"default false" json:"is_response"`
 	IsDeleted  bool      `gorm:"default false" json:"-"`
 	CreatedAt  time.Time `json:"-" gorm:"autoCreateTime"`
 	UpdatedAt  time.Time `json:"-" gorm:"autoUpdateTime"`
